  tool. This has the effect to fix CPSSkins unit tests.
- Taking advantage of the new centralized CPSI18n.tests.translations module.
- Fixed translation files through the CPSI18n/bin/fix_pos script.
- Fixed the URL displayed in exportRssContentBox (was exportRSSContentBox
  instead of exportRssContentBox)
- Fixed the computeContributors() method to work properly with anonymous
  contributors, previously it was crashing.
- Merged the files nuxeo_css1.css.dtml and nuxeo_css2.css.dtml into one
  default.css.dtml file. This is a step for the fix of bug #770.
- Renamed "nuxeo_print_css.css" into "default_print.css". This fixes the last
  point of #473 (Reorganizing /skins/cps_styles/).
- Added a declaration for the stylesheet of CPSBoxes. This is a step for the fix
  of bug #770.
- Modified some ZPT files so that they are valid XHTML 1.0 Strict. This is a
  work in progress to fix #773 "Using XHTML 1.0 Strict by default for CPS
  sites".
- #816: comments for !copy_submit(accept, reject, unpublish...) missing on
  publication history of a document.
- Gave to the SectionReviewer role the ChangeSubobjectsOrder permission in the
  sections. This is more logical. One who can accept/reject contents in sections
  should also be allowed to order them.
- Gave to the Owner of a document the permission to view his/her submitted
  document.
- fix #535: Redesign the advanced search form (completed)
- #838 use folder_contents as nav action only when explicitly requested in
  content_lib/info_detail
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Don't use strings for permission names in the installer.
- Added an example display method for formatting Gestalt's content items.
- Replaced Localizer by TranslationService.
- Moved computeContributors from CPSDocument to the utils module.
- Made the modify transition title more readable
- Roles relevant in context is now an optional argument to the script that
  returns assigned local roles.
- New javascript function getSelectedRadioLabel