@@ -61,3 +61,5 @@ New internal features:
 - Roles relevant in context is now an optional argument to the script that
   returns assigned local roles.
 - New javascript function getSelectedRadioLabel
+- Do not use getBaseUrl and getContextUrl scripts to see if a role is set
+  locally, but simply the object relative url.
